bk_ida/sjengida/c3/suicide_mid_eval
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:906:11: error: use of undeclared identifier 'xmmword_41C590'
v149[0] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:907:11: error: use of undeclared identifier 'xmmword_41C5A0'
v146[0] = xmmword_41C5A0; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:908:11: error: use of undeclared identifier 'xmmword_41C590'
v149[1] = xmmword_41C590; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:909:11: error: use of undeclared identifier 'xmmword_41C5A0'
v146[1] = xmmword_41C5A0; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1212:5: error: use of undeclared identifier 'dword_66859C'
+ ( dword_66859C[v21] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1227:5: error: use of undeclared identifier 'dword_66859C'
+ ( dword_66859C[v21] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1253:8: error: use of undeclared identifier 'dword_66859C'
v90 = &dword_66859C[v21]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1297:8: error: use of undeclared identifier 'dword_66859C'
v80 = &dword_66859C[v21]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1342:9: error: use of undeclared identifier 'dword_66859C'
v101 = &dword_66859C[v21]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/seval.c:1432:8: error: use of undeclared identifier 'dword_66859C'
v35 = &dword_66859C[v21]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/suicide_mid_eval/src/obj/seval.o] Error 1
